# The MIT License (MIT)
#
# Copyright (c) 2024 Aliaksei Bialiauski
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[package]
name = "fakehub"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = """
Portable command-line tool for running and configuring fake GitHub API for testing.
"""

[[bin]]
name = "fakehub"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.14"

[dependencies]
fakehub-server = { path = "../server", version = "0.0.0" }
anyhow = "1.0.86"
clap = { version = "4.5.7", optional = true, features = ["derive", "string"] }
clap_complete = { version = "4.5.1", optional = true }
clap_mangen = { version = "0.2.20", optional = true }
clap_complete_nushell = { version = "4.5.1", optional = true }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
reqwest = "0.12.7"
defer = "0.2.1"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "clap_mangen", "clap_complete_nushell"]

[package.metadata.cargo-machete]
ignored = ["clap_complete", "clap_complete_nushell", "clap_mangen"]
