[package]
name = "github-mirror"
version = "0.0.9"
authors = ["OpenAPI Generator team and contributors"]
description = "GitHub's v3 REST API."
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
