[package]
name = "fakehub"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = """
GitHub API Server Stub. Fully functional fake version of a GitHub API that
supports all the features and works locally, with no connection to GitHub at
all.
"""
authors = ["Aliaksei Bialíauski <aliaksei.bialiauski@hey.com>", "Ivanchuk Ivan <l3r8y@duck.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
axum = "0.7.5"
log = { version = "0.4.21", features = [] }
env_logger = "0.11.3"
tempdir = "0.3.7"
